--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -6,7 +6,7 @@ schemaVersion = "0.0.1"
 namespace = "zannc"
 name = "GodsAPI"
 versionNumber = "1.0.0"
-description = ""
+description = "A library for developers to easily add new Gods / NPC Gods to the game without having to dig through files."
 websiteUrl = "https://github.com/excellent-ae/zannc-GodsAPI"
 containsNsfwContent = false
 
@@ -36,13 +36,9 @@ target = "./LICENSE"
 source = "./src"
 target = "./plugins"
 
-[[build.copy]]
-source = "./packages"
-target = "./plugins_data"
-
 [publish]
 repository = "https://thunderstore.io"
 communities = ["hades-ii"]
 
 [publish.categories]
-hades-ii = ["mods", "misc"]
+hades-ii = ["mods", "tools", "libraries"]
